<resources>
    <string name="app_name">AndroidBase</string>

    <!--animations-->
    <string name="transition_gallery" translatable="false">gallery_image</string>

    <!--permessi-->
    <string name="Titolo_permesso_obbligatorio">Richiesta permesso</string>

    <string name="Messaggio_permesso_storage">È necessario consentire il permesso per la gestione dei file nella SD.\n Vuoi impostarlo adesso?</string>
    <string name="Messaggio_permesso_posizione">È necessario consentire il permesso per accedere alla tua posizione.\n Vuoi impostarlo adesso?</string>
    <string name="Messaggio_permesso_camera">È necessario consentire il permesso per accedere alla fotocamera.\n Vuoi impostarlo adesso?</string>

    <string name="La_mia_posizione">La mia posizione</string>
    <string name="Credenziali_non_corrette">Credenziali non corrette</string>
    <string name="Campi_obbligatori_non_inseriti">Campi obbligatori non inseriti</string> <!-- ELIMINARE -->
    <string name="Email_conferma">Ti è stata inviata una email di conferma per completare la registrazione.</string>
    <string name="Devi_selezionare_una_lingua">Devi selezionare una lingua</string>

    <string name="Nessuna_allergia_impostata">Nessuna allergia impostata</string>
    <string name="Completa_la_tua_scheda_allergie">Completa la tua scheda allergie</string>
    <string name="Scegli_lingua">Scegli lingua</string>
    <string name="Traduzione">Traduzione</string>
    <string name="Scansiona_il_QR_CODE">Scansiona il QR CODE del ristorante per visualizzarlo</string>
    <string name="Avviso_gps">Il tuo GPS è disabilitato, vuoi attivarlo?</string> <!-- ELIMINARE -->
    <string name="Si">Si</string> <!-- ELIMINARE -->
    <string name="Annulla">Annulla</string> <!-- ELIMINARE -->

    <string name="Scegli_immagine_da_galleria">Scegli immagine da galleria</string>
    <string name="Scatta_foto">Scatta foto</string>
    <string name="Scegli_audio_da_galleria">Scegli audio da galleria</string>
    <string name="Registra_audio">Registra audio</string>
    <string name="Scegli_video_da_galleria">Scegli video da galleria</string>
    <string name="Gira_video">Gira video</string>
    <string name="Condividi">Condividi</string>
    <string name="termini_condizioni">Iscrivendoti al servizio accetti Termini e condizioni e informativa sulla Privacy Policy</string> <!-- ELIMINARE -->
    <string name="termini_condizioni_1">Iscrivendoti al servizio accetti</string> <!-- ELIMINARE -->
    <string name="termini_condizioni_2">Termini e condizioni</string> <!-- ELIMINARE -->
    <string name="termini_condizioni_3">e informativa sulla</string> <!-- ELIMINARE -->
    <string name="termini_condizioni_4">Privacy Policy</string> <!-- ELIMINARE -->
    <string name="Iscriviti">Iscriviti</string> <!-- ELIMINARE -->

    <string name="Esegui_il_login">Esegui il login</string>
    <string name="oppure">oppure</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="Password_dimenticata">Hai dimenticato la password?</string>
    <string name="Nessun_account">Non hai un account?</string>
    <string name="Iscriviti_ora">Iscriviti ora</string>
    <string name="Login">Login</string>
    <string name="Signin">Signin</string>
    <string name="Entra">Entra</string>
    <string name="Controllare_dati_inseriti">Controllare i dati inseriti</string>
    <string name="Placeholder">Prova</string>
    <string name="skip_login">Vai alla login</string>
    <string name="discover_mrapps">Scopri Mr. APPs</string>
    <string name="app_development">Sviluppo App</string>
    <string name="websites_realization">Realizzazione Siti Web</string>
    <string name="ecommerce_design">Progettazione E-Commerce</string>
    <string name="our_apps">Le nostre App</string>
    <string name="contact_us">Contattaci ora</string>
    <string name="Credits">Credits</string>
    <string name="developed_by">è un\'applicazione realizzata da Mr. APPs</string>
    <string name="request_quote">Richiedi un preventivo</string>

</resources>
