<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="@dimen/max_width_base"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/max_width_base"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="discover">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:tint="?colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/credits_items_text_color"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/discover_mrapps"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="development">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_stay_current_portrait_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:tint="?colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/credits_items_text_color"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/app_development"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="development">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_personal_video_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:tint="?colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/credits_items_text_color"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/websites_realization"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="development">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:tint="?colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/credits_items_text_color"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/ecommerce_design"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="development">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_apps_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:tint="?colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/credits_items_text_color"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/our_apps"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="development">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_email_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:tint="?colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/credits_items_text_color"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/contact_us"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>